--- a/content/_games/u10-6---3.md
+++ b/content/_games/u10-6---3.md
@@ -2,8 +2,8 @@
 game_id: 0163077b-bb3f-4868-aeb7-8d7d55de03b9
 division: U10
 round: 6
-day: Saturday
-time: 8.30am
+day: No Game
+time: This Week
 teamHome: 0228b24d-cd2d-4cc5-9770-5f9ea493933d
 teamAway: acd5e916-5565-46f8-a17f-bc239694a0e7
 diamond: 0
