--- a/content/_games/u10-1---3.md
+++ b/content/_games/u10-1---3.md
@@ -2,8 +2,8 @@
 game_id: 3df827fc-96a8-4170-9b4b-496116b4c620
 division: U10
 round: 1
-day: Saturday
-time: 8.30am
+day: No Game
+time: This Week
 teamHome: 4069754b-1a52-4a80-bcac-80c32e419cd3
 teamAway: acd5e916-5565-46f8-a17f-bc239694a0e7
 diamond: 0
