--- a/content/_games/u10-13---3.md
+++ b/content/_games/u10-13---3.md
@@ -2,8 +2,8 @@
 game_id: c022904b-07c9-4b9e-abba-bf2ce2b01452
 division: U10
 round: 13
-day: Saturday
-time: 8.30am
+day: No Game
+time: This Week
 teamHome: 283ce7e1-4b95-4c04-b281-7f43da5153dc
 teamAway: acd5e916-5565-46f8-a17f-bc239694a0e7
 diamond: 0
