--- a/content/_games/u10-14---3.md
+++ b/content/_games/u10-14---3.md
@@ -2,8 +2,8 @@
 game_id: 0d236203-c746-4ee7-ad3c-f0f2ea736260
 division: U10
 round: 14
-day: Saturday
-time: 8.30am
+day: No Game
+time: This Week
 teamHome: 0228b24d-cd2d-4cc5-9770-5f9ea493933d
 teamAway: acd5e916-5565-46f8-a17f-bc239694a0e7
 diamond: 0
