update U11 game time

--- a/content/_games/u11-1---4.md
+++ b/content/_games/u11-1---4.md
@@ -2,8 +2,8 @@
 game_id: 528016db-623e-4c19-8acf-a4c50c74c5bf
 division: U11
 round: 1
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: 4812c0b3-f814-470e-bae8-0cd3d6c83524
 teamAway: f11bbafb-1a7b-4f7c-b79e-57e2089e9b5a
 diamond: 2
