--- a/content/_games/u11-2---1.md
+++ b/content/_games/u11-2---1.md
@@ -2,8 +2,8 @@
 game_id: 615c6c20-fa95-4b25-a2d4-4d8d01070771
 division: U11
 round: 2
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: ff8e8225-ec38-42eb-a0b9-8af0208dbddb
 teamAway: f748f38c-e36e-4947-ae26-c3fc590170c2
 diamond: 3
