--- a/content/_games/u11-2---2.md
+++ b/content/_games/u11-2---2.md
@@ -2,8 +2,8 @@
 game_id: 24d70524-853f-40e3-b87b-995e72dcb76d
 division: U11
 round: 2
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: 1c4565e1-731a-4fc5-8067-ddd18d401c99
 teamAway: f11bbafb-1a7b-4f7c-b79e-57e2089e9b5a
 diamond: 2
