--- a/content/_games/u11-2--.md
+++ b/content/_games/u11-2--.md
@@ -2,8 +2,8 @@
 game_id: a4845901-a40d-4382-b7e6-74593d2929cd
 division: U11
 round: 2
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: 4cc2b6a9-3697-4674-8a79-254df4fd6d53
 teamAway: d38e9ab9-52a8-4a38-82aa-38712647b82d
 diamond: 1
