--- a/content/_games/u11-3---2.md
+++ b/content/_games/u11-3---2.md
@@ -2,8 +2,8 @@
 game_id: c73110b4-0935-4fa3-b698-c0be59c65a11
 division: U11
 round: 3
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: f748f38c-e36e-4947-ae26-c3fc590170c2
 teamAway: f11bbafb-1a7b-4f7c-b79e-57e2089e9b5a
 diamond: 12
