--- a/content/_games/u11-4---2.md
+++ b/content/_games/u11-4---2.md
@@ -2,8 +2,8 @@
 game_id: 7f4a7ef8-b4fe-4d04-a09c-4b3baff1adf5
 division: U11
 round: 4
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: 4812c0b3-f814-470e-bae8-0cd3d6c83524
 teamAway: ff8e8225-ec38-42eb-a0b9-8af0208dbddb
 diamond: 1
