--- a/content/_games/u11-5---2.md
+++ b/content/_games/u11-5---2.md
@@ -2,8 +2,8 @@
 game_id: 916836ed-1695-4f1f-8c3f-69b8fc48ac5e
 division: U11
 round: 5
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: 3744c291-8b00-455f-af00-66fbb342a7fb
 teamAway: 1c4565e1-731a-4fc5-8067-ddd18d401c99
 diamond: 12
