--- a/content/_games/u11-5---3.md
+++ b/content/_games/u11-5---3.md
@@ -2,8 +2,8 @@
 game_id: ad619ba8-28cb-4278-b78f-221664b58b3b
 division: U11
 round: 5
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: 1aaaacd2-2e1d-4587-89f2-d28e6bd12bbb
 teamAway: ff8e8225-ec38-42eb-a0b9-8af0208dbddb
 diamond: 2
