--- a/content/_games/u11-6---3.md
+++ b/content/_games/u11-6---3.md
@@ -2,8 +2,8 @@
 game_id: c08141dc-e8b2-4ce1-bbcd-2c8fae4955d9
 division: U11
 round: 6
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: 4cc2b6a9-3697-4674-8a79-254df4fd6d53
 teamAway: 3744c291-8b00-455f-af00-66fbb342a7fb
 diamond: 1
