--- a/content/_games/u11-7---1.md
+++ b/content/_games/u11-7---1.md
@@ -2,8 +2,8 @@
 game_id: 253baf1b-6cc4-4620-9ff6-462cb38c1249
 division: U11
 round: 7
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: 4cc2b6a9-3697-4674-8a79-254df4fd6d53
 teamAway: 1c4565e1-731a-4fc5-8067-ddd18d401c99
 diamond: 1
