--- a/content/_games/u11-7---2.md
+++ b/content/_games/u11-7---2.md
@@ -2,8 +2,8 @@
 game_id: f2ce4a70-1c98-4976-8212-09e2cad6ee9b
 division: U11
 round: 7
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: f748f38c-e36e-4947-ae26-c3fc590170c2
 teamAway: 4812c0b3-f814-470e-bae8-0cd3d6c83524
 diamond: 11
