--- a/content/_games/u11-7--.md
+++ b/content/_games/u11-7--.md
@@ -2,8 +2,8 @@
 game_id: 6b03f371-2d1c-455c-ab9d-c08f3cb7387d
 division: U11
 round: 7
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: 1aaaacd2-2e1d-4587-89f2-d28e6bd12bbb
 teamAway: d38e9ab9-52a8-4a38-82aa-38712647b82d
 diamond: 1
