--- a/content/_games/u11-8---3.md
+++ b/content/_games/u11-8---3.md
@@ -2,8 +2,8 @@
 game_id: c360987c-bab3-40f9-8dfb-5f657103a004
 division: U11
 round: 8
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: 5f70aed6-b104-48ed-b65a-be3b56374c86
 teamAway: f748f38c-e36e-4947-ae26-c3fc590170c2
 diamond: 1
