--- a/content/_games/u11-8---4.md
+++ b/content/_games/u11-8---4.md
@@ -2,8 +2,8 @@
 game_id: f2c8abd6-a8bc-43cb-a7ba-63648bdfee2d
 division: U11
 round: 8
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: 3744c291-8b00-455f-af00-66fbb342a7fb
 teamAway: ff8e8225-ec38-42eb-a0b9-8af0208dbddb
 diamond: 12
