--- a/content/_games/u11-9--.md
+++ b/content/_games/u11-9--.md
@@ -2,8 +2,8 @@
 game_id: cbc43147-0d78-46e2-805e-f91e2ffb4edc
 division: U11
 round: 9
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: ff8e8225-ec38-42eb-a0b9-8af0208dbddb
 teamAway: d38e9ab9-52a8-4a38-82aa-38712647b82d
 diamond: 1
