--- a/content/_games/u11-1---2.md
+++ b/content/_games/u11-1---2.md
@@ -2,8 +2,8 @@
 game_id: 928d9255-5f65-45f9-a36f-0ebe6cee1156
 division: U11
 round: 1
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: 1aaaacd2-2e1d-4587-89f2-d28e6bd12bbb
 teamAway: 3744c291-8b00-455f-af00-66fbb342a7fb
 diamond: 4
