--- a/content/_games/u11-1---3.md
+++ b/content/_games/u11-1---3.md
@@ -2,8 +2,8 @@
 game_id: d4e884b8-2276-4519-9e22-a86af0f735d1
 division: U11
 round: 1
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: 1c4565e1-731a-4fc5-8067-ddd18d401c99
 teamAway: 5f70aed6-b104-48ed-b65a-be3b56374c86
 diamond: 3
