--- a/content/_games/u11-1--.md
+++ b/content/_games/u11-1--.md
@@ -2,8 +2,8 @@
 game_id: 80905aef-5876-49ab-a6d6-8b7ead262c60
 division: U11
 round: 1
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: d38e9ab9-52a8-4a38-82aa-38712647b82d
 teamAway: f748f38c-e36e-4947-ae26-c3fc590170c2
 diamond: 1
