--- a/content/_games/u11-2---3.md
+++ b/content/_games/u11-2---3.md
@@ -2,8 +2,8 @@
 game_id: f82318ea-f5d5-45ba-9416-95ffb1e022f0
 division: U11
 round: 2
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: 4812c0b3-f814-470e-bae8-0cd3d6c83524
 teamAway: 3744c291-8b00-455f-af00-66fbb342a7fb
 diamond: 1
