--- a/content/_games/u11-4---1.md
+++ b/content/_games/u11-4---1.md
@@ -2,8 +2,8 @@
 game_id: 9f2c54b3-0997-47c8-9484-68dd9d421753
 division: U11
 round: 4
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: f11bbafb-1a7b-4f7c-b79e-57e2089e9b5a
 teamAway: 3744c291-8b00-455f-af00-66fbb342a7fb
 diamond: 12
