--- a/content/_games/u11-6---1.md
+++ b/content/_games/u11-6---1.md
@@ -2,8 +2,8 @@
 game_id: e8f26cad-4868-4378-9884-5bf6fcf3f951
 division: U11
 round: 6
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: 1c4565e1-731a-4fc5-8067-ddd18d401c99
 teamAway: f11bbafb-1a7b-4f7c-b79e-57e2089e9b5a
 diamond: 2
