--- a/content/_games/u11-6---4.md
+++ b/content/_games/u11-6---4.md
@@ -2,8 +2,8 @@
 game_id: a12a9b74-bcaf-46db-80ad-9ba1e4537493
 division: U11
 round: 6
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: f748f38c-e36e-4947-ae26-c3fc590170c2
 teamAway: ff8e8225-ec38-42eb-a0b9-8af0208dbddb
 diamond: 12
