--- a/content/_games/u11-7---4.md
+++ b/content/_games/u11-7---4.md
@@ -2,8 +2,8 @@
 game_id: 2e626f51-dc1c-43d6-842f-b654ab748034
 division: U11
 round: 7
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: 3744c291-8b00-455f-af00-66fbb342a7fb
 teamAway: 5f70aed6-b104-48ed-b65a-be3b56374c86
 diamond: 12
