--- a/content/_games/u11-8---1.md
+++ b/content/_games/u11-8---1.md
@@ -2,8 +2,8 @@
 game_id: d1f12b23-7050-4319-a917-301f06e24956
 division: U11
 round: 8
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: 4812c0b3-f814-470e-bae8-0cd3d6c83524
 teamAway: 1aaaacd2-2e1d-4587-89f2-d28e6bd12bbb
 diamond: 2
