--- a/content/_games/u11-9---1.md
+++ b/content/_games/u11-9---1.md
@@ -2,8 +2,8 @@
 game_id: 48064e2a-6613-47b9-82e9-379ce2e2c556
 division: U11
 round: 9
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: 3744c291-8b00-455f-af00-66fbb342a7fb
 teamAway: f748f38c-e36e-4947-ae26-c3fc590170c2
 diamond: 11
