--- a/content/_games/u11-9---2.md
+++ b/content/_games/u11-9---2.md
@@ -2,8 +2,8 @@
 game_id: 85cafca1-2961-4f93-96ed-14fd2926ef43
 division: U11
 round: 9
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: 5f70aed6-b104-48ed-b65a-be3b56374c86
 teamAway: 4cc2b6a9-3697-4674-8a79-254df4fd6d53
 diamond: 1
