--- a/content/_games/u11-9---3.md
+++ b/content/_games/u11-9---3.md
@@ -2,8 +2,8 @@
 game_id: 6947a81b-9f93-4261-8aa1-a74abba632ad
 division: U11
 round: 9
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: f11bbafb-1a7b-4f7c-b79e-57e2089e9b5a
 teamAway: 1aaaacd2-2e1d-4587-89f2-d28e6bd12bbb
 diamond: 12
