--- a/content/_games/u11-9---4.md
+++ b/content/_games/u11-9---4.md
@@ -2,8 +2,8 @@
 game_id: 399f9e8c-a493-45b6-9a2e-194fe9af360c
 division: U11
 round: 9
-day: Saturday
-time: 8.30am
+day: Friday
+time: 6.15pm
 teamHome: 4812c0b3-f814-470e-bae8-0cd3d6c83524
 teamAway: 1c4565e1-731a-4fc5-8067-ddd18d401c99
 diamond: 1
